Upgrade of parts, datagen, me to ae2 v19